# OpenClassrooms_Project_02

./: README.md  main.py  pyproject.toml  requirements.txt
gui/: main_window.py  style.css  worker.py
scraper/: config.py  extract.py  models.py  save.py  scraper.py  transform.py
