[project]
name = "openclassrooms-project-02"
version = "0.1.0"
description = "Book scraper in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "numpy==2.3.1",
    "pip==25.2",
    "requests==2.32.4",
    "soupsieve==2.7",
    "typing-extensions==4.14.1",
    "unidecode==1.4.0",
    "urllib3==2.5.0",
    "uv==0.8.4",
]
